# ujikom-sistem-informasi

./: .env  Cargo.toml
migrations/: 20250623133030_create_pegawai_table.down.sql  20250623133030_create_pegawai_table.up.sql  20250623133046_create_divisi_table.down.sql  20250623133046_create_divisi_table.up.sql  20250623133058_create_presensi_table.down.sql  20250623133058_create_presensi_table.up.sql  20250623133109_prepopulate_tables.up.sql
src/: main.rs
templates/: index.html
