[package]
name = "softeng"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }
tokio = { version = "1.45.1", features = ["full"] }
anyhow = "1.0"
sqlx-sqlite = "0.8.6"
axum = "0.8"
serde = { version = "1", features = [ "derive" ] }
serde_with = "1"
serde_json = "1"
tower = { version = "0.5.2", features = ["util"] }
askama = { version = "0.14.0" }
